kubernetes/qas/k8s-ingress.yaml
# k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vg-hc-store-react-ingress-integration-qas
  namespace: integration-qas
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
  - host: qas.vg-hc.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vg-hc-store-react-service-integration-qas
            port:
              number: 80
